Actualizacion de productos

--- a/01-introHtml/pages/productos.html
+++ b/01-introHtml/pages/productos.html
@@ -28,7 +28,7 @@
 
     <main>
         <h1>
-            Soy la página de Productos
+            Soy la página de Productos. fhfhfhfjf
         </h1>
 
         <h2>
